[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3.2"
tracing-appender= "0.2"
serde_json = "1.0"
serde = "1.0"
serializer = { path = "../serializer" }